Extension: Statistics: Daily Calories + Training Results + Exercise Prototype, Statistics: ViewPagerAdapter, Support JAVA 11 enabled, Added transparent color, Constraint set PrimaryKey to AutoGen, Moved DataGenerator to utils folder, Added new Queries (DAO), CleanUp + Refactoring issues

--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,71 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout_statistics"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sg2022.we_got_the_moves.ui.statistics.StatisticsFragment">
+    tools:ignore="MissingDefaultResource">
 
-    <TextView
-        android:id="@+id/textview_statistics"
-        android:layout_width="wrap_content"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout_statistics"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/enter_text"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:contentDescription="@string/enter_text"
+        app:layout_constraintBottom_toTopOf="@+id/view_pager_statistics"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/sg_design_light_green"
+        app:tabInlineLabel="false"
+        app:tabMode="fixed"
+        app:tabTextColor="@color/white" />
 
-    <TextView
-        android:id="@+id/textview_calorie_level_statistics"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/your_calorie_level"
-        android:textAlignment="viewStart"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_statistics" />
-
-    <TextView
-        android:id="@+id/editview_calorie_value__statistics"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autoSizeTextType="uniform"
-        android:ems="4"
-        android:fontFamily="serif"
-        android:hint="@string/empty_string"
-        android:importantForAutofill="no"
-        android:minHeight="48dp"
-        android:text="@string/empty_string"
-        android:textAlignment="viewStart"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textview_calorie_level_statistics"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textview_calorie_level_statistics"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/pie_chart_statistics"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager_statistics"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:hapticFeedbackEnabled="false"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_calorie_level_statistics"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth="match_parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tab_layout_statistics" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
