Fix: Statistics: Training Results set image buttons to green color (not visible on white background)

--- a/app/src/main/res/layout/fragment_statistics_weekly.xml
+++ b/app/src/main/res/layout/fragment_statistics_weekly.xml
@@ -202,7 +202,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:background="@drawable/ic_arrow_right_black_24dp"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/sg_design_green"
                     android:contentDescription="@string/right"
                     android:minWidth="48dp"
                     android:minHeight="48dp"
@@ -217,7 +217,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/ic_arrow_left_black_24dp"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/sg_design_green_transparent"
                     android:contentDescription="@string/left"
                     android:minWidth="48dp"
                     android:minHeight="48dp"
