--- a/app/src/main/res/layout/fragment_statistics_exercises.xml
+++ b/app/src/main/res/layout/fragment_statistics_exercises.xml
@@ -12,9 +12,10 @@
         <ScrollView
             android:id="@+id/scrollview_exercises_statistics"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:contentDescription="@string/enter_text"
             android:fillViewport="true"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -24,49 +25,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textview_header_exercises_statistics"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/yymmddhhmmss"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="@+id/textview_value_exercises_statistics"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_title_exercises_statistics" />
-
-                <TextView
-                    android:id="@+id/textview_value_exercises_statistics"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:autoSizeMinTextSize="6sp"
-                    android:autoSizeTextType="none"
-                    android:fontFamily="serif"
-                    android:hint="@string/default_total_time"
-                    android:importantForAutofill="no"
-                    android:maxLines="1"
-                    android:text="@string/default_total_time"
-                    android:textAlignment="viewEnd"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_header_exercises_statistics"
-                    tools:ignore="SpeakableTextPresentCheck" />
-
-                <TextView
-                    android:id="@+id/textview_text_exercises_statistics"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/your_total_training_time"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_header_exercises_statistics" />
 
                 <TextView
                     android:id="@+id/textview_title_exercises_statistics"
@@ -84,12 +42,13 @@
                 <com.github.mikephil.charting.charts.HorizontalBarChart
                     android:id="@+id/bar_chart_exercises_statistics"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="16dp"
                     android:background="@color/white"
+                    android:layoutMode="opticalBounds"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_value_exercises_statistics"
+                    app:layout_constraintTop_toBottomOf="@+id/textview_title_exercises_statistics"
                     app:layout_constraintWidth="match_parent">
 
                 </com.github.mikephil.charting.charts.HorizontalBarChart>
