Fix: Statistics Weekly Overview changed displayed time format

--- a/app/src/main/res/layout/fragment_statistics_weekly.xml
+++ b/app/src/main/res/layout/fragment_statistics_weekly.xml
@@ -30,11 +30,33 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@string/yymmddhhmmss"
+                    android:text="@string/yy_mm_dd_hh_mm_ss"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/textview_value_total_statistics"
                     app:layout_constraintTop_toBottomOf="@+id/textview_title_weekly_statistics" />
+
+                <TextView
+                    android:id="@+id/textview_header_total_week_statistics"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/dd_hh_mm_ss"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@+id/textview_value_total_week_weekly_statistics"
+                    app:layout_constraintTop_toBottomOf="@+id/textview_value_total_statistics" />
+
+                <TextView
+                    android:id="@+id/textview_header_average_weekly_statistics"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/hh_mm_ss"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="@+id/textview_value_average_weekly_statistics"
+                    app:layout_constraintTop_toBottomOf="@+id/textview_value_total_week_weekly_statistics" />
 
                 <TextView
                     android:id="@+id/textview_value_total_statistics"
@@ -57,6 +79,27 @@
                     tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
+                    android:id="@+id/textview_value_total_week_weekly_statistics"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:autoSizeMinTextSize="6sp"
+                    android:autoSizeTextType="none"
+                    android:fontFamily="serif"
+                    android:hint="@string/total_week_time"
+                    android:importantForAutofill="no"
+                    android:maxLines="1"
+                    android:text="@string/total_week_time"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textview_header_total_week_statistics"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <TextView
                     android:id="@+id/textview_text_total_statistics"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -69,7 +112,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textview_header_total_statistics" />
 
                 <TextView
-                    android:id="@+id/textview_average_text_weekly_statistics"
+                    android:id="@+id/textview_text_average_weekly_statistics"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -78,10 +121,22 @@
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_average_header_weekly_statistics" />
+                    app:layout_constraintTop_toBottomOf="@+id/textview_header_average_weekly_statistics" />
 
                 <TextView
-                    android:id="@+id/textview_average_value_weekly_statistics"
+                    android:id="@+id/textview_text_total_week_weekly_statistics"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/weekly_total_time"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textview_header_total_week_statistics" />
+
+                <TextView
+                    android:id="@+id/textview_value_average_weekly_statistics"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
@@ -95,19 +150,8 @@
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_average_header_weekly_statistics"
+                    app:layout_constraintTop_toBottomOf="@+id/textview_header_average_weekly_statistics"
                     tools:ignore="SpeakableTextPresentCheck" />
-
-                <TextView
-                    android:id="@+id/textview_average_header_weekly_statistics"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/hhmmss"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="@+id/textview_average_value_weekly_statistics"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_value_total_statistics" />
 
                 <TextView
                     android:id="@+id/textview_title_weekly_statistics"
@@ -132,69 +176,25 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_average_value_weekly_statistics"
+                    app:layout_constraintTop_toBottomOf="@+id/textview_value_average_weekly_statistics"
                     app:layout_constraintWidth="match_parent">
 
                 </com.github.mikephil.charting.charts.BarChart>
-
-                <SeekBar
-                    android:id="@+id/seekbar_yaxis_weekly_statistics"
-                    style="@style/Widget.AppCompat.SeekBar.Discrete"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="8dp"
-                    android:max="2"
-                    android:minHeight="24dp"
-                    android:progress="0"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textview_calender_weekly_statistics" />
 
                 <TextView
                     android:id="@+id/textview_calender_weekly_statistics"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginBottom="32dp"
                     android:text="@string/cw_zero"
                     android:textAlignment="center"
                     android:textSize="16sp"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/bar_chart_weekly_statistics" />
-
-                <TextView
-                    android:id="@+id/textview_seconds_weekly_statistics"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="@string/minutes"
-                    android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/textview_hours_weekly_statistics"
-                    app:layout_constraintStart_toEndOf="@+id/textview_minutes_weekly_statistics"
-                    app:layout_constraintTop_toBottomOf="@+id/seekbar_yaxis_weekly_statistics" />
-
-                <TextView
-                    android:id="@+id/textview_minutes_weekly_statistics"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/seconds"
-                    android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="@+id/seekbar_yaxis_weekly_statistics"
-                    app:layout_constraintTop_toTopOf="@+id/textview_seconds_weekly_statistics" />
-
-                <TextView
-                    android:id="@+id/textview_hours_weekly_statistics"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/hours"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/seekbar_yaxis_weekly_statistics"
-                    app:layout_constraintTop_toTopOf="@+id/textview_seconds_weekly_statistics" />
 
                 <ImageButton
                     android:id="@+id/imagebtn_calender_right_weekly_statistics"
