--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -16,8 +16,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textview_title_user_profile_settings"
@@ -31,6 +30,34 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imagebtn_user_profile_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:background="@color/sg_design_green"
+            android:backgroundTint="@color/sg_design_green"
+            android:contentDescription="@string/empty_string"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textview_title_user_profile_settings"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textview_title_user_profile_settings"
+            app:srcCompat="@drawable/ic_edit_black_24dp"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <ScrollView
+            android:id="@+id/scrollview_trainings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textview_title_user_profile_settings">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/textview_user_name_header_settings"
@@ -56,8 +83,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/edittext_user_height_settings"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/edittext_user_height_settings"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toTopOf="@+id/edittext_user_height_settings" />
 
         <TextView
             android:id="@+id/textview_user_weight_header_settings"
@@ -70,8 +96,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/edittext_user_weight_settings"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/edittext_user_weight_settings"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toTopOf="@+id/edittext_user_weight_settings" />
 
         <TextView
             android:id="@+id/textview_user_age_header_settings"
@@ -84,8 +109,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/edittext_user_age_settings"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/edittext_user_age_settings"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toTopOf="@+id/edittext_user_age_settings" />
 
         <TextView
             android:id="@+id/textview_user_calorie_header_settings"
@@ -98,8 +122,46 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/edittext_user_calories_settings"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/edittext_user_calories_settings"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toTopOf="@+id/edittext_user_calories_settings" />
+
+        <TextView
+            android:id="@+id/textview_gender_header_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Gender"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/radiogroup_sex_settings"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/radiogroup_sex_settings" />
+
+        <TextView
+            android:id="@+id/textview_camera_boolean_header_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Camera"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/radiogroup_camera_settings"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/radiogroup_camera_settings" />
+
+        <TextView
+            android:id="@+id/textview_tts_boolean_header_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Voice Feedback"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/radiogroup_tts_settings"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/radiogroup_tts_settings" />
 
         <EditText
             android:id="@+id/edittext_user_name_settings"
@@ -123,6 +185,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textview_user_height_header_settings"
             app:layout_constraintTop_toBottomOf="@+id/textview_title_user_profile_settings" />
+
 
         <EditText
             android:id="@+id/edittext_user_height_settings"
@@ -214,6 +277,7 @@
             app:layout_constraintStart_toEndOf="@+id/textview_user_calorie_header_settings"
             app:layout_constraintTop_toBottomOf="@+id/radiogroup_sex_settings" />
 
+
         <RadioGroup
             android:id="@+id/radiogroup_sex_settings"
             android:layout_width="wrap_content"
@@ -221,8 +285,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edittext_user_age_settings">
+            app:layout_constraintTop_toBottomOf="@+id/edittext_user_age_settings"
+            app:layout_constraintStart_toEndOf="@id/textview_gender_header_settings"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_layout_radiogroup_settings"
@@ -233,12 +298,8 @@
                     android:id="@+id/radiobtn_male_settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/sg_design_green"
-                    android:backgroundTint="@color/sg_design_green"
-                    android:buttonTint="@color/white"
                     android:checked="@{user.sex==SEX.MALE, default=false}"
-                    android:drawableTint="@color/sg_design_green"
-                    android:ems="6"
+                    android:ems="5"
                     android:text="@string/male"
                     android:textColor="@color/black"
                     android:textSize="16sp"
@@ -251,12 +312,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:background="@color/sg_design_green"
-                    android:backgroundTint="@color/sg_design_green"
-                    android:buttonTint="@color/white"
                     android:checked="@{user.sex==SEX.FEMALE, default=false}"
-                    android:drawableTint="@color/sg_design_green"
-                    android:ems="6"
+                    android:ems="5"
                     android:text="@string/female"
                     android:textColor="@color/black"
                     android:textSize="16sp"
@@ -268,21 +325,100 @@
 
         </RadioGroup>
 
-        <ImageButton
-            android:id="@+id/imagebtn_user_profile_settings"
+        <RadioGroup
+            android:id="@+id/radiogroup_camera_settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:background="@color/sg_design_green"
-            android:backgroundTint="@color/sg_design_green"
-            android:contentDescription="@string/empty_string"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textview_title_user_profile_settings"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textview_title_user_profile_settings"
-            app:srcCompat="@drawable/ic_edit_black_24dp"
-            tools:ignore="SpeakableTextPresentCheck" />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/edittext_user_calories_settings"
+            app:layout_constraintStart_toEndOf="@id/textview_camera_boolean_header_settings"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint_layout_cameragroup_settings"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RadioButton
+                    android:id="@+id/radiobtn_frontcamera_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="@{user.frontCamera, default=false}"
+                    android:ems="5"
+                    android:text="Front"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RadioButton
+                    android:id="@+id/radiobtn_backcamera_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:checked="@{!user.frontCamera, default=false}"
+                    android:ems="5"
+                    android:text="Back"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toEndOf="@+id/radiobtn_frontcamera_settings"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </RadioGroup>
+
+        <RadioGroup
+            android:id="@+id/radiogroup_tts_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/radiogroup_camera_settings"
+            app:layout_constraintStart_toEndOf="@id/textview_tts_boolean_header_settings"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint_layout_ttsgroup_settings"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RadioButton
+                    android:id="@+id/radiobtn_ttsOn_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="@{user.tts, default=false}"
+                    android:ems="5"
+                    android:text="On"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RadioButton
+                    android:id="@+id/radiobtn_ttsOff_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:checked="@{!user.tts, default=false}"
+                    android:ems="5"
+                    android:text="Off"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toEndOf="@+id/radiobtn_ttsOn_settings"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </RadioGroup>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
@@ -292,7 +428,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edittext_user_calories_settings">
+            app:layout_constraintTop_toBottomOf="@+id/textview_tts_boolean_header_settings">
 
             <Button
                 android:id="@+id/btn_user_profile_save"
@@ -320,5 +456,11 @@
                 tools:ignore="TextContrastCheck" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
